@@ -1,5 +1,15 @@
 2011-07-02  Anders Carlsson  <andersca@apple.com>
 
+        Have another go at fixing the Windows build.
+
+        * WebProcess/Plugins/Netscape/NetscapePlugin.h:
+        * WebProcess/Plugins/Netscape/win/NetscapePluginWin.cpp:
+        (WebKit::NetscapePlugin::containingWindow):
+        (WebKit::NetscapePlugin::platformHandleMouseEnterEvent):
+        (WebKit::NetscapePlugin::platformHandleMouseLeaveEvent):
+
+2011-07-02  Anders Carlsson  <andersca@apple.com>
+
         Null out the plug-in controller after destroying the plug-in.
         https://bugs.webkit.org/show_bug.cgi?id=63869
 
